.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Department__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Department_Name__c</fullName>
        <formula>Incap311__Department__r.Incap311__Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Department__c</fullName>
        <label>Department</label>
        <referenceTo>Incap311__Department__c</referenceTo>
        <relationshipLabel>Service Departments</relationshipLabel>
        <relationshipName>Service_Departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Type_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Service Departments</relationshipLabel>
        <relationshipName>Service_Departments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Service Department</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Service Department Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>